# miipher-2

./: .gitignore  .gitmodules  CLAUDE.md  LIGHTNING_VOCODER_MIGRATION.md  PAPER_COMPLIANCE_ANALYSIS.md  README.md  auto_resume_training.sh  pyproject.toml
cmd/: cache_features.py  check_adapter_arch.py  degrade.py  evaluate.py  finetune_vocoder.py  inference.py  inference_dir.py  pre_train_hifigan.py  pre_train_vocoder.py  preprocess.py  train_adapter.py  train_hubert.py  train_pa.py  train_vocoder.py
cmds/: degrade.py  evaluate.py  evaluate_simple.py  preprocess.py
config/: config.yaml
configs/: accelerate_config.yaml  adapter.yaml  adapter_l2.yaml  adapter_l7.yaml  adapter_layer_12.yaml  adapter_layer_4_mhubert_147.yaml  adapter_layer_6.yaml  adapter_layer_6_mhubert_147.yaml  adapter_layer_6_mhubert_147_ddp.yaml  adapter_layer_9.yaml  adapter_layer_9_mhubert_147.yaml  fleurs_r_cache_features.yaml  fleurs_r_preprocess.yaml  hifigan_finetune.yaml  hifigan_finetune_layer_12.yaml  hifigan_finetune_layer_4_mhubert_147.yaml  hifigan_finetune_layer_6.yaml  hifigan_finetune_layer_6_mhubert_147.yaml  hifigan_finetune_layer_9.yaml  hifigan_finetune_layer_9_mhubert_147.yaml  hifigan_pretrain.yaml  hifigan_pretrain_layer_12.yaml  hifigan_pretrain_layer_4_mhubert_147.yaml  hifigan_pretrain_layer_6.yaml  hifigan_pretrain_layer_6_mhubert_147.yaml  hifigan_pretrain_layer_9.yaml  hifigan_pretrain_layer_9_mhubert_147.yaml  infer.yaml  infer_dir.yaml  infer_file.yaml  infer_hubert_large_l2.yaml  infer_mhubert_l6.yaml  infer_wav2vec2_base_l2.yaml  infer_wavlm_base_l2.yaml  inference.yaml  jvs_cache_features.yaml  jvs_preprocess.yaml  lightning_train.yaml  lv_hifigan_ssl.yaml  preprocess.yaml  (+8 more)
configs/data/: jvs_hubert_l6.yaml
configs/model/: hifigan_conformer.yaml  hifigan_ssl.yaml
configs/preprocess/: for_train.yaml
configs/train/: default.yaml
demo/: README.md  README_spaces.md  app.py  pyproject.toml  requirements.txt
demo/models/miipher2/: README.md  config.json
docs/: accelerate_migration_guide.md  checkpoint_guide.md  checkpoint_resumption_guide.md  note.md  評価指標.md
results/: 8khz.csv  8khz_miipher.csv  8khz_miipher_1.csv  8khz_miipher_2.csv  PA_E3_miipher.csv  PA_E3_miipher_2.csv  degrade.csv  degrade_miipher.csv  degrade_miipher_2.csv  original.csv  results_table.tex  samples_8khz_16khz.csv  summary_8khz.csv  summary_degrade.csv  summary_original.csv
results/hubert_large_l2/: degrade_samples.csv  samples_8khz_16khz.csv
results/mhubert_l6/: degrade_samples.csv  samples_8khz_16khz.csv
results/miipher_1/: degrade_samples.csv
results/wav2vec2_base_l2/: degrade_samples.csv  samples_8khz_16khz.csv
results/wavlm_base_l2/: degrade_samples.csv  samples_8khz_16khz.csv
scripts/: aggregate_results.py  check_datasets_head.py  check_datasets_stats.py  check_hf_datasets_stats.py  check_webdataset.py  convert_datasets_fleurs_r.py  convert_datasets_jvs.py  convert_datasets_libritts_r.py  count_webdataset_samples.py  decompress_fleurs_r.sh  download_libri_tts_r.sh  eval_figure.py  fix_checkpoint.py  generate_latex_table.py  upload_to_hf.py
src/miipher_2/: accelerate_utils.py  infer.py
src/miipher_2/adapters/: parallel_adapter.py
src/miipher_2/data/: dataloader.py  webdataset_loader.py
src/miipher_2/dataset/: __init__.py  fleurs_r.py  jvs_corpus.py  libritts_r.py  sr_wds.py
src/miipher_2/extractors/: hubert.py  ssl_extractor.py  usm.py
src/miipher_2/hifigan/: __init__.py  discriminator.py  generator.py  meldataset.py  models.py  modules.py  prenet.py  train.py  utils.py
src/miipher_2/lightning_vocoders/: __init__.py  hifigan.py  lightning_module.py
src/miipher_2/model/: README.md  __init__.py  feature_cleaner.py  hubert.py  miipher.py  modules.py  parallel_adapter.py  trainer.py  (+3 more)
src/preprocess/: __init__.py  noise_augmentation.py  preprocessor.py
(+80 files in other folders)
