[project]
name = "open-miipher-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0",
    "hydra-core>=1.3.2",
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "pillow>=11.2.1",
    "soundfile>=0.13.1",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.11",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T201",
    "COM812",
    "ISC001",
]
unfixable = [
    "F401",
    "F841",
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"*.py" = [
    "D",
    "S101",
    "N802",
    "ARG",
    "S311",
    "S301",
]
"__init__.py" = [
    "F401",
]

[tool.ruff.lint.pylint]
max-args = 6


[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true
